--- a/package.json
+++ b/package.json
@@ -3,15 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "@wordpress/compose": "3.9.0",
+    "@wordpress/data": "5",
+    "@wordpress/data-controls": "1.5.0",
+    "@wordpress/element": "2.10.0",
+    "@wordpress/i18n": "3.7.0",
+    "@wordpress/scripts": "6.1.0",
+    "body-parser": "^1.19.0",
+    "classnames": "2.2.6",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-ipfilter": "^1.1.2",
+    "express-rate-limit": "^5.1.1",
+    "mongoose": "^5.12.12",
+    "react": "16",
+    "react-dom": "^16",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4",
+    "redux-logger": "^3.0.6",
+    "uniqid": "5.2.0",
     "web-vitals": "^1.1.2"
   },
+  "devDependencies": {
+    "fetch-lite": "^1.1.0",
+    "mocha": "^7.1.1"
+  },
   "scripts": {
+    "start:backend": "node server.js",
+    "dev-test": "./node_modules/mocha/bin/mocha",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
