--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "express-ipfilter": "^1.1.2",
     "express-rate-limit": "^5.1.1",
     "mongoose": "^5.12.12",
+    "random-picture": "^4.0.4",
     "react": "16",
     "react-dom": "^16",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4",
+    "reactstrap": "^8.9.0",
     "redux-logger": "^3.0.6",
     "uniqid": "5.2.0",
     "web-vitals": "^1.1.2"
