Migrated App to Vite

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cra-wp-data",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@wordpress/compose": "3.9.0",
     "@wordpress/data": "5",
@@ -10,6 +11,7 @@
     "@wordpress/i18n": "3.7.0",
     "@wordpress/scripts": "6.1.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^5.3.3",
     "classnames": "2.2.6",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -17,26 +19,32 @@
     "express-rate-limit": "^5.1.1",
     "mongoose": "^5.12.12",
     "random-picture": "^4.0.4",
-    "react": "16",
+    "react": "^16",
     "react-dom": "^16",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4",
     "reactstrap": "^8.9.0",
     "redux-logger": "^3.0.6",
-    "uniqid": "5.2.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^1.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
+    "@babel/preset-react": "^7.23.3",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
     "fetch-lite": "^1.1.0",
-    "mocha": "^7.1.1"
+    "mocha": "^7.1.1",
+    "vite": "^5.1.4"
   },
   "scripts": {
     "start:backend": "node server.js",
     "dev-test": "./node_modules/mocha/bin/mocha",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "eslintConfig": {
     "extends": [
