still not working version but we're close

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@wordpress/api-fetch": "^6.0.0",
     "@wordpress/compose": "3.9.0",
     "@wordpress/data": "5",
-    "@wordpress/data-controls": "1.5.0",
     "@wordpress/element": "6.18.0",
     "@wordpress/i18n": "3.7.0",
     "@wordpress/scripts": "6.1.0",
